--- a/public/gradient/dashboard/index.html
+++ b/public/gradient/dashboard/index.html
@@ -3,7 +3,7 @@
   <!-- [Head] start -->
 
   <head>
-    <title>Home | Gradient Able Dashboard Template</title>
+    <title>Sistem Surat JBG</title>
     <!-- [Meta] -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui" />
@@ -19,24 +19,24 @@
     <meta name="author" content="codedthemes" />
 
     <!-- [Favicon] icon -->
-    <link rel="icon" href="../assets/images/favicon.svg" type="image/x-icon" />
+    <link rel="icon" href="/gradient/assets/images/favicon.svg" type="image/x-icon" />
 
     <!-- map-vector css -->
-    <link rel="stylesheet" href="../assets/css/plugins/jsvectormap.min.css" />
+    <link rel="stylesheet" href="/gradient/assets/css/plugins/jsvectormap.min.css" />
     <!-- [Google Font : Poppins] icon -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
-    <!-- [Tabler Icons] https://tablericons.com -->
-    <link rel="stylesheet" href="../assets/fonts/tabler-icons.min.css" />
-    <!-- [Feather Icons] https://feathericons.com -->
-    <link rel="stylesheet" href="../assets/fonts/feather.css" />
-    <!-- [Font Awesome Icons] https://fontawesome.com/icons -->
-    <link rel="stylesheet" href="../assets/fonts/fontawesome.css" />
-    <!-- [Material Icons] https://fonts.google.com/icons -->
-    <link rel="stylesheet" href="../assets/fonts/material.css" />
+    <!-- [Tabler Icons] https://tablericons.com   -->
+    <link rel="stylesheet" href="/gradient/assets/fonts/tabler-icons.min.css" />
+    <!-- [Feather Icons] https://feathericons.com   -->
+    <link rel="stylesheet" href="/gradient/assets/fonts/feather.css" />
+    <!-- [Font Awesome Icons] https://fontawesome.com/icons   -->
+    <link rel="stylesheet" href="/gradient/assets/fonts/fontawesome.css" />
+    <!-- [Material Icons] https://fonts.google.com/icons   -->
+    <link rel="stylesheet" href="/gradient/assets/fonts/material.css" />
     <!-- [Template CSS Files] -->
-    <link rel="stylesheet" href="../assets/css/style.css" id="main-style-link" />
-    <link rel="stylesheet" href="../assets/css/style-preset.css" />
+    <link rel="stylesheet" href="/gradient/assets/css/style.css" id="main-style-link" />
+    <link rel="stylesheet" href="/gradient/assets/css/style-preset.css" />
 
   </head>
   <!-- [Head] end -->
@@ -54,40 +54,64 @@
 <nav class="pc-sidebar">
   <div class="navbar-wrapper">
     <div class="m-header">
-      <a href="../dashboard/index.html" class="b-brand text-primary">
-        <!-- ========   Change your logo from here   ============ -->
-        <img src="../assets/images/logojbg.png" alt="logo image" class="logo-lg" style="height: 100px; width: auto;" /> />
-      </a>
-    </div>
+  <a href="/gradient/dashboard/index.html" class="b-brand text-primary">
+    <!-- ========   Change your logo from here   ============ -->
+    <img src="/gradient/assets/images/logojbg2.png" alt="My Company Logo" class="logo-lg" style="height: 50px; width: auto;" />
+  </a>
+</div>
     <div class="navbar-content">
       <ul class="pc-navbar">
         <li class="pc-item pc-caption">
           <label>Navigation</label>
         </li>
         <li class="pc-item">
-          <a href="../dashboard/index.html" class="pc-link"
+          <a href="/gradient/dashboard/index.html" class="pc-link"
             ><span class="pc-micon"> <i class="ph ph-gauge"></i></span><span class="pc-mtext">Dashboard</span></a
           >
         </li>
-
+ <!-- Di sini kita tambahkan menu "Surat Masuk" -->
+                <li class="pc-item">
+                    <a href="{{ url('/surat-masuk') }}" class="pc-link">
+                        <span class="pc-micon">
+                            <i class="ti ti-mail"></i> <!-- Icon surat -->
+                        </span>
+                        <span class="pc-mtext">Surat Masuk</span>
+                    </a>
+                </li>
+        <li class="pc-item">
+            <a href="{{ url('/surat-keluar') }}" class="pc-link">
+                <span class="pc-micon">
+                    <i class="ti ti-send"></i> <!-- Icon surat keluar -->
+                </span>
+                <span class="pc-mtext">Surat Keluar</span>
+            </a>
+        </li>
+                <li class="pc-item">
+            <a href="{{ url('/agenda') }}" class="pc-link">
+                <span class="pc-micon">
+                    <i class="ti ti-calendar"></i> <!-- Icon kalender/agenda -->
+                </span>
+                <span class="pc-mtext">Agenda</span>
+            </a>
+        </li>
         <li class="pc-item pc-caption">
           <label>UI Components</label>
           <i class="ph ph-compass-tool"></i>
         </li>
         <li class="pc-item">
-          <a href="../elements/bc_typography.html" class="pc-link">
+          <a href="/gradient/elements/bc_typography.html" class="pc-link">
             <span class="pc-micon"><i class="ph ph-text-aa"></i></span>
-            <span class="pc-mtext">Typography</span>
+            <span class="pc-mtext">surat masuk</span>
           </a>
         </li>
         <li class="pc-item">
-          <a href="../elements/bc_color.html" class="pc-link">
+          <a href="/gradient/elements/bc_color.html" class="pc-link">
             <span class="pc-micon"><i class="ph ph-palette"></i></span>
             <span class="pc-mtext">Color</span>
           </a>
         </li>
         <li class="pc-item">
-          <a href="../elements/icon-feather.html" class="pc-link">
+          <a href="/gradient/elements/icon-feather.html" class="pc-link">
             <span class="pc-micon"><i class="ph ph-flower-lotus"></i></span>
             <span class="pc-mtext">Icons</span>
           </a>
@@ -98,13 +122,13 @@
           <i class="ph ph-devices"></i>
         </li>
         <li class="pc-item">
-          <a href="../pages/login-v1.html" target="_blank" class="pc-link">
+          <a href="/gradient/pages/login-v1.html" target="_blank" class="pc-link">
             <span class="pc-micon"><i class="ph ph-lock"></i></span>
             <span class="pc-mtext">Login</span>
           </a>
         </li>
         <li class="pc-item">
-          <a href="../pages/register-v1.html" target="_blank" class="pc-link">
+          <a href="/gradient/pages/register-v1.html" target="_blank" class="pc-link">
             <span class="pc-micon"><i class="ph ph-user-circle-plus"></i></span>
             <span class="pc-mtext">Register</span>
           </a>
@@ -159,7 +183,7 @@
           </ul>
         </li>
         <li class="pc-item"
-          ><a href="../other/sample-page.html" class="pc-link">
+          ><a href="/gradient/other/sample-page.html" class="pc-link">
             <span class="pc-micon">
               <i class="ph ph-desktop"></i>
             </span>
@@ -175,10 +199,10 @@
  <!-- [ Header Topbar ] start -->
 <header class="pc-header">
   <div class="m-header">
-    <a href="../dashboard/index.html" class="b-brand text-primary">
+    <a href="/gradient/dashboard/index.html" class="b-brand text-primary">
       <!-- ========   Change your logo from here   ============ -->
-      <img src="../assets/images/logojbg.png" alt="logo image" class="logo-lg" style="height: 100px; width: auto;" /> />
-    </a>
+      <img src="/gradient/assets/images/logojbg2.png" alt="My Company Logo" class="logo-lg" style="height: 50px; width: auto;" />
+        </a>
   </div>
   <div class="header-wrapper"> <!-- [Mobile Media Block] start -->
 <div class="me-auto pc-mob-drp">
@@ -229,7 +253,7 @@
         data-bs-auto-close="outside"
         aria-expanded="false"
       >
-        <img src="../assets/images/user/avatar-2.jpg" alt="user-image" class="user-avtar" />
+        <img src="/gradient/assets/images/user/avatar-2.jpg" alt="user-image" class="user-avtar" />
       </a>
       <div class="dropdown-menu dropdown-user-profile dropdown-menu-end pc-h-dropdown">
         <div class="dropdown-body">
@@ -407,7 +431,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="card statistics-card-1">
               <div class="card-body">
-                <img src="../assets/images/widget/img-status-4.svg" alt="img" class="img-fluid img-bg" />
+                <img src="/gradient/assets/images/widget/img-status-4.svg" alt="img" class="img-fluid img-bg" />
                 <div class="d-flex align-items-center justify-content-between mb-3 drp-div">
                   <h6 class="mb-0">Daily Sales</h6>
                 </div>
@@ -432,7 +456,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="card statistics-card-1">
               <div class="card-body">
-                <img src="../assets/images/widget/img-status-5.svg" alt="img" class="img-fluid img-bg" />
+                <img src="/gradient/assets/images/widget/img-status-5.svg" alt="img" class="img-fluid img-bg" />
                 <div class="d-flex align-items-center justify-content-between mb-3 drp-div">
                   <h6 class="mb-0">Monthly Sales</h6>
                 </div>
@@ -457,7 +481,7 @@
           <div class="col-md-4 col-sm-12">
             <div class="card statistics-card-1 bg-brand-color-1">
               <div class="card-body">
-                <img src="../assets/images/widget/img-status-6.svg" alt="img" class="img-fluid img-bg" />
+                <img src="/gradient/assets/images/widget/img-status-6.svg" alt="img" class="img-fluid img-bg" />
                 <div class="d-flex align-items-center justify-content-between mb-3 drp-div">
                   <h6 class="mb-0 text-white">Yearly Sales</h6>
                 </div>
@@ -496,7 +520,7 @@
                       <th>Transaction ID</th>
                     </tr>
                     <tr>
-                      <td><img src="../assets/images/widget/p1.jpg" alt="prod img" class="img-fluid" /></td>
+                      <td><img src="/gradient/assets/images/widget/p1.jpg" alt="prod img" class="img-fluid" /></td>
                       <td>PNG002413</td>
                       <td>Jane Elliott</td>
                       <td>06-01-2017</td>
@@ -504,7 +528,7 @@
                       <td>#7234421</td>
                     </tr>
                     <tr>
-                      <td><img src="../assets/images/widget/p2.jpg" alt="prod img" class="img-fluid" /></td>
+                      <td><img src="/gradient/assets/images/widget/p2.jpg" alt="prod img" class="img-fluid" /></td>
                       <td>PNG002344</td>
                       <td>John Deo</td>
                       <td>05-01-2017</td>
@@ -512,7 +536,7 @@
                       <td>#7234486</td>
                     </tr>
                     <tr>
-                      <td><img src="../assets/images/widget/p3.jpg" alt="prod img" class="img-fluid" /></td>
+                      <td><img src="/gradient/assets/images/widget/p3.jpg" alt="prod img" class="img-fluid" /></td>
                       <td>PNG002653</td>
                       <td>Eugine Turner</td>
                       <td>04-01-2017</td>
@@ -520,7 +544,7 @@
                       <td>#7234417</td>
                     </tr>
                     <tr>
-                      <td><img src="../assets/images/widget/p4.jpg" alt="prod img" class="img-fluid" /></td>
+                      <td><img src="/gradient/assets/images/widget/p4.jpg" alt="prod img" class="img-fluid" /></td>
                       <td>PNG002156</td>
                       <td>Jacqueline Howell</td>
                       <td>03-01-2017</td>
@@ -548,7 +572,7 @@
           </div>
           <div class="col-sm-6 ms-auto my-1">
             <ul class="list-inline footer-link mb-0 justify-content-sm-end d-flex">
-              <li class="list-inline-item"><a href="../index.html">Home</a></li>
+              <li class="list-inline-item"><a href="/gradient/index.html">Home</a></li>
             </ul>
           </div>
         </div>
@@ -556,25 +580,26 @@
     </footer>
 
     <!-- [Page Specific JS] start -->
-    <script src="../assets/js/plugins/apexcharts.min.js"></script>
-    <script src="../assets/js/plugins/jsvectormap.min.js"></script>
-    <script src="../assets/js/plugins/world.js"></script>
-    <script src="../assets/js/plugins/world-merc.js"></script>
-    <script src="../assets/js/pages/dashboard-sales.js"></script>
+    <script src="/gradient/assets/js/plugins/apexcharts.min.js"></script>
+    <script src="/gradient/assets/js/plugins/jsvectormap.min.js"></script>
+    <script src="/gradient/assets/js/plugins/world.js"></script>
+    <script src="/gradient/assets/js/plugins/world-merc.js"></script>
+    <script src="/gradient/assets/js/pages/dashboard-sales.js"></script>
     <!-- [Page Specific JS] end -->
     <!-- Required Js -->
-    <script src="../assets/js/plugins/popper.min.js"></script>
-    <script src="../assets/js/plugins/simplebar.min.js"></script>
-    <script src="../assets/js/plugins/bootstrap.min.js"></script>
-    <script src="../assets/js/fonts/custom-font.js"></script>
-    <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/theme.js"></script>
-    <script src="../assets/js/plugins/feather.min.js"></script>
+    <script src="/gradient/assets/js/plugins/popper.min.js"></script>
+    <script src="/gradient/assets/js/plugins/simplebar.min.js"></script>
+    <script src="/gradient/assets/js/plugins/bootstrap.min.js"></script>
+    <script src="/gradient/assets/js/fonts/custom-font.js"></script>
+    <script src="/gradient/assets/js/script.js"></script>
+    <script src="/gradient/assets/js/theme.js"></script>
+    <script src="/gradient/assets/js/plugins/feather.min.js"></script>
 
 
     <script>
       layout_change('light');
     </script>
+
 
     <script>
       layout_sidebar_change('light');
@@ -604,3 +629,5 @@
   </body>
   <!-- [Body] end -->
 </html>
+
+
